--- a/app/src/debug/res/values/google_maps_api.xml
+++ b/app/src/debug/res/values/google_maps_api.xml
@@ -20,5 +20,5 @@
     Once you have your key (it starts with "AIza"), replace the "google_maps_key"
     string in this file.
     -->
-    <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">AIzaSyAqNx5kBA78Rrx8bZVc7iCT0YYrV4r4Lvc</string>
+    <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">Your Key Here</string>
 </resources>
